Ya esta el front despues de no dormir

--- a/src/index.html
+++ b/src/index.html
@@ -1,13 +1,30 @@
 <!doctype html>
-<html lang="en">
+<html lang="es">
 <head>
-  <meta charset="utf-8">
-  <title>RegistroClientes</title>
-  <base href="/">
-  <meta name="viewport" content="width=device-width, initial-scale=1">
-  <link rel="icon" type="image/x-icon" href="favicon.ico">
+  <meta charset="utf-8" />
+  <title>Registro de Organizaciones Deportivas</title>
+  <base href="/" />
+
+  <!-- 🌐 Responsive design -->
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+
+  <!-- 🔍 SEO básico -->
+  <meta name="description" content="Sistema de gestión de organizaciones deportivas y sus encargados" />
+  <meta name="author" content="TuNombre o TuEquipo" />
+
+  <!-- 📱 Color del navegador móvil -->
+  <meta name="theme-color" content="#007acc" />
+
+  <!-- ✨ Google Fonts -->
+  <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap" rel="stylesheet" />
+
+  <!-- 🧠 Ícono de pestaña -->
+  <link rel="icon" type="image/x-icon" href="assets/favicon.ico" />
+
+  <!-- ✨ (Opcional) animaciones, iconos u otras librerías -->
+  <!-- <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"/> -->
 </head>
-<body>
+<body style="margin: 0; font-family: 'Roboto', sans-serif;">
   <app-root></app-root>
 </body>
 </html>
